--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# file manager empty files
+.empty
+.sparkleshare
+# font editor temporary files
+*(Autosaved).glyphs
+*.vfbak
+
 # OS generated files
 .DS_Store
 .DS_Store?
